# HarvardX-CS109x-Introduction-to-Data-Science-with-Python

./: .gitignore  1.1_lesson_linear_regression.py  1.2_lesson_error.py  1.2_lesson_linear_regression.py  Advertising.csv  README.md  main.py  pyproject.toml  t.py  ~WRL4048.tmp
1. Lesson/: Exercise_1.1_Simple_Data_Plotting.ipynb  Exercise_1.2_Finding_the_Best_k_in_kNN_Regression.ipynb
Exercises/Section_1_Linear_Regression/: Exercise_1.2_Simple_kNN_Regression.ipynb
Exercises/Section_2_Multiple_and_Polynomial_Regression/: 2.1.1.Intro_to_multilinear_scaffold.ipynb  2.1.5.Fitting_a_mulit_regression_model.ipynb  2.2.4.Get_dummies.ipynb  2.2.5.Interp_diff_scales.ipynb  2.2.8.Mulit-collinearity_vs_model_predictions.ipynb  2.3.2.Poly.ipynb  2.3.4.Polynomial_modeling.ipynb  helper.py
Exercises/Section_3_Model_Selection_and_Cross-Validation/: 3.1.4.Model_selection_scaffold.ipynb  3.1.5.Model_Selection_using_validation.ipynb  3.2.3.Model_Selection_using_Cross-validation.ipynb
Exercises/Section_4_Bias_Variance_and_Hyperparameters/: 4.1.Variation_of_coefficientsipynb.ipynb  4.2.3_Bias_Variance_Tradeoff.ipynb  4.3.3.Regularization_with_cv.ipynb  4.3.6.Hyper-parameter_Tuning_for_Ridge_Regression.ipynb  4.3.7.Simple_Lasso_and_Ridge_Regularization.ipynb
Exercises/Section_5_Classification_and_Logistic_Regression/: 5.1.5.Simple_k-NN_Classification_and_Logistic_Regression.ipynb  5.2.5.Guesstimating_Beta_values_for_Logistic_Regression.ipynb
Exercises/Section_6_Multi-logistic_Regression_and_Missingness/: 6.1.5.Multinomial_Logistic_Regression.ipynb  helper.py  (+2 more)
(+17 files in other folders)
